
---------
Add a close() method to IRODSFile that will close the underlying IRODSFileSystem.  This is useful for occasions where the IRODSFile is created by a URI, 
where the IRODSFileSystem was not created in the calling code.  This was causing -4000 errors when the socket closed without a disconnect being sent.
A better solution will probably appear in newer versions of Jargon

---------
Tests and fix for Bug 57 -  parallel file get operation does not work in Jargon

---------
Resource enhancements to list, add resources to a resource group, and remove resources from a resource group for
enhancement request (Bug 62 -  resource group CRUD methods requested)

---------
Adding Maven support in parallel to main ANT build.  ANT is still the primary build mechanism, but Maven support is added to conveniently build a distro for working with Fedora and irodsfedora
code.  the pom.xml should not be used at this point for normal build activities.  Jargon will be moving to Maven in one of the upcoming releases.

---------
Support for 'no distinct' option, a new IRODS2.3 feature.  There are new methods in IRODSCommands, IRODSFile, and IRODSFile system that default to 'distinct' but have additional signatures
to override.

---------
Tests cases for multiple reported bugs, expanded test suite including 'functional tests', Misc cleanups and fixes

================================================================================================
Outstanding Issues

Please consult https://www.irods.org/bugzilla/buglist.cgi?query_format=specific&order=relevance+desc&bug_status=__open__&product=&content=jargon

for the latest open bugs and Jargon feature requests

================================================================================================
Documentation and Installation

-See the README.txt in this distribution
-Review Jargon documentation at: http://www.irods.org/index.php/Jargon
-Review information at the IRODS web site: http://www.irods.org