@@ -32,6 +32,7 @@ test.irods.admin=rods
 test.irods.admin.password=test
 
 test.irods.user=test1
+test.irods.userDN=test1DN
 test.irods.password=test
 test.irods.resource=test1-resc
 # experimenting with an alternate user with a different resource
