@@ -3,6 +3,8 @@ exec `iadmin mkuser test1 rodsadmin`
 
 exec `iadmin moduser test1 password test`
 
+exec `iadmin aua test1 test1DN`
+
 exec `iadmin mkuser test2 rodsuser`
 
 exec `iadmin moduser test2 password test`
